--- a/MacNotesWidget/Base.lproj/TodayViewController.xib
+++ b/MacNotesWidget/Base.lproj/TodayViewController.xib
@@ -8,31 +8,35 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="TodayViewController" customModule="MacNotesWidget" customModuleProvider="target">
             <connections>
-                <outlet property="height" destination="s2r-SO-Sao" id="C0k-OO-Jgy"/>
-                <outlet property="mainViewController" destination="iPA-4D-n0c" id="DRW-0n-NUb"/>
-                <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
+                <outlet property="addBtn" destination="xUy-q1-5FJ" id="Tfk-hM-kBO"/>
+                <outlet property="height" destination="xEZ-xh-jYY" id="PTb-Nq-i7K"/>
+                <outlet property="horizontalLine" destination="oVe-ai-y7f" id="nFJ-S6-Edn"/>
+                <outlet property="popUp" destination="Q9I-V5-fSy" id="nRh-3e-Blk"/>
+                <outlet property="removeBtn" destination="VNq-rX-aiY" id="ymW-Hm-BhC"/>
+                <outlet property="text" destination="YX2-6I-qPk" id="Pvd-tk-hDj"/>
+                <outlet property="textField" destination="YX2-6I-qPk" id="oZ4-x4-zhZ"/>
+                <outlet property="textView" destination="XQQ-xR-x9p" id="cDs-Db-CDY"/>
+                <outlet property="textViewHeight" destination="B2G-oP-Xpq" id="EFF-6d-sUa"/>
+                <outlet property="view" destination="IT3-bE-Lzb" id="nqQ-Nd-6id"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView simulatedAppContext="notificationCenter" translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
-        </customView>
-        <customView id="ZVo-xe-7Jk" userLabel="Main">
-            <rect key="frame" x="0.0" y="0.0" width="350" height="100"/>
+        <customView id="IT3-bE-Lzb" userLabel="Today View">
+            <rect key="frame" x="0.0" y="0.0" width="380" height="239"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yy4-iq-6XN">
-                    <rect key="frame" x="0.0" y="0.0" width="340" height="100"/>
-                    <clipView key="contentView" drawsBackground="NO" id="grL-6q-9te">
-                        <rect key="frame" x="0.0" y="0.0" width="340" height="100"/>
+                <scrollView wantsLayer="YES" borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VE8-PC-KXD">
+                    <rect key="frame" x="0.0" y="23" width="373" height="150"/>
+                    <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="So2-ba-beE">
+                        <rect key="frame" x="0.0" y="0.0" width="373" height="150"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView drawsBackground="NO" importsGraphics="NO" usesFontPanel="YES" findStyle="panel" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" smartInsertDelete="YES" id="Arc-dg-KoK">
-                                <rect key="frame" x="0.0" y="0.0" width="340" height="100"/>
+                            <textView drawsBackground="NO" importsGraphics="NO" usesFontPanel="YES" findStyle="panel" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="XQQ-xR-x9p">
+                                <rect key="frame" x="0.0" y="1" width="373" height="150"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <size key="minSize" width="340" height="100"/>
+                                <size key="minSize" width="373" height="150"/>
                                 <size key="maxSize" width="463" height="10000000"/>
                                 <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                             </textView>
@@ -40,32 +44,116 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </clipView>
                     <constraints>
-                        <constraint firstAttribute="height" constant="100" id="s2r-SO-Sao"/>
+                        <constraint firstAttribute="height" constant="150" id="B2G-oP-Xpq"/>
                     </constraints>
-                    <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="KXe-Sx-laZ">
+                    <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="XTX-ub-tdu">
                         <rect key="frame" x="-100" y="-100" width="87" height="18"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
-                    <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="op5-6B-sNu">
-                        <rect key="frame" x="324" y="0.0" width="16" height="100"/>
+                    <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="VCg-P3-Nxr">
+                        <rect key="frame" x="357" y="0.0" width="16" height="150"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                 </scrollView>
+                <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="LlF-M9-0gx">
+                    <rect key="frame" x="-2" y="175" width="378" height="26"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="77B-Pq-yWu"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="Zng-Le-HIb"/>
+                    </constraints>
+                    <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Q9I-V5-fSy">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="menu"/>
+                        <menu key="menu" id="pmC-AO-RRI"/>
+                        <connections>
+                            <action selector="onPopUpClick:" target="-2" id="Apc-zv-ThP"/>
+                        </connections>
+                    </popUpButtonCell>
+                </popUpButton>
+                <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YX2-6I-qPk">
+                    <rect key="frame" x="0.0" y="217" width="311" height="22"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="Enter title" drawsBackground="YES" id="5Gk-3X-nNS">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                    <connections>
+                        <action selector="textFieldEndEditing:" target="-2" id="hyz-MI-t2d"/>
+                    </connections>
+                </textField>
+                <box verticalHuggingPriority="750" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="oVe-ai-y7f">
+                    <rect key="frame" x="0.0" y="206" width="373" height="5"/>
+                </box>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="VNq-rX-aiY">
+                    <rect key="frame" x="344" y="217" width="29" height="20"/>
+                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSRemoveTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="3XG-rp-z4b">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="onRemoveBtnClick:" target="-2" id="IQn-f1-KQh"/>
+                    </connections>
+                </button>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="xUy-q1-5FJ">
+                    <rect key="frame" x="319" y="217" width="20" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="0pf-Gg-hZu"/>
+                        <constraint firstAttribute="width" constant="20" id="KgT-GC-8Ye"/>
+                    </constraints>
+                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSAddTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="eLx-oh-cmv">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="onAddBtnClick:" target="-2" id="ZWM-WU-iug"/>
+                    </connections>
+                </button>
+                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="igK-R5-gQh">
+                    <rect key="frame" x="165" y="0.0" width="50" height="18"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="50" id="kmd-wP-lEa"/>
+                        <constraint firstAttribute="height" constant="18" id="wYW-H3-bxo"/>
+                    </constraints>
+                    <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="down" imagePosition="only" alignment="center" alternateImage="up" state="on" imageScaling="proportionallyDown" inset="2" id="RlK-5k-xfk">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="onUpDownBtnClick:" target="-2" id="Ui9-h3-q4a"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="Yy4-iq-6XN" secondAttribute="bottom" id="41v-Ju-FJe"/>
-                <constraint firstItem="Yy4-iq-6XN" firstAttribute="leading" secondItem="ZVo-xe-7Jk" secondAttribute="leading" id="97j-zI-q8W"/>
-                <constraint firstAttribute="trailing" secondItem="Yy4-iq-6XN" secondAttribute="trailing" constant="10" id="nlv-E9-iAN"/>
-                <constraint firstItem="Yy4-iq-6XN" firstAttribute="top" secondItem="ZVo-xe-7Jk" secondAttribute="top" id="tbY-Oq-DSp"/>
+                <constraint firstItem="xUy-q1-5FJ" firstAttribute="top" secondItem="VNq-rX-aiY" secondAttribute="top" id="1cg-OP-TnS"/>
+                <constraint firstItem="VNq-rX-aiY" firstAttribute="leading" secondItem="xUy-q1-5FJ" secondAttribute="trailing" constant="5" id="2Lb-xc-o2K"/>
+                <constraint firstItem="xUy-q1-5FJ" firstAttribute="bottom" secondItem="YX2-6I-qPk" secondAttribute="bottom" id="7iy-eL-II3"/>
+                <constraint firstAttribute="trailing" secondItem="xUy-q1-5FJ" secondAttribute="trailing" constant="41" id="8g9-b2-eJm"/>
+                <constraint firstItem="VNq-rX-aiY" firstAttribute="top" secondItem="IT3-bE-Lzb" secondAttribute="top" constant="2" id="BbW-5X-3XE"/>
+                <constraint firstItem="VE8-PC-KXD" firstAttribute="leading" secondItem="IT3-bE-Lzb" secondAttribute="leading" id="Nv0-8I-dzZ"/>
+                <constraint firstItem="xUy-q1-5FJ" firstAttribute="leading" secondItem="YX2-6I-qPk" secondAttribute="trailing" constant="8" id="R7k-Uk-11j"/>
+                <constraint firstItem="igK-R5-gQh" firstAttribute="centerX" secondItem="IT3-bE-Lzb" secondAttribute="centerX" id="TCv-z7-K2f"/>
+                <constraint firstAttribute="bottom" secondItem="igK-R5-gQh" secondAttribute="bottom" id="Uym-ht-jBD"/>
+                <constraint firstAttribute="trailing" secondItem="oVe-ai-y7f" secondAttribute="trailing" constant="7" id="WeB-03-0pv"/>
+                <constraint firstAttribute="trailing" secondItem="LlF-M9-0gx" secondAttribute="trailing" constant="7" id="a7B-LK-fDV"/>
+                <constraint firstItem="YX2-6I-qPk" firstAttribute="leading" secondItem="LlF-M9-0gx" secondAttribute="leading" id="aJ1-kR-VTR"/>
+                <constraint firstItem="oVe-ai-y7f" firstAttribute="top" secondItem="xUy-q1-5FJ" secondAttribute="bottom" constant="8" symbolic="YES" id="dyV-sD-Z5w"/>
+                <constraint firstItem="igK-R5-gQh" firstAttribute="top" secondItem="VE8-PC-KXD" secondAttribute="bottom" constant="5" id="eHW-gf-rRl"/>
+                <constraint firstAttribute="trailing" secondItem="VE8-PC-KXD" secondAttribute="trailing" constant="7" id="jhe-PD-K23"/>
+                <constraint firstItem="LlF-M9-0gx" firstAttribute="leading" secondItem="IT3-bE-Lzb" secondAttribute="leading" id="kn2-NY-9Ri"/>
+                <constraint firstAttribute="trailing" secondItem="VNq-rX-aiY" secondAttribute="trailing" constant="7" id="nrW-4H-vIU"/>
+                <constraint firstItem="xUy-q1-5FJ" firstAttribute="bottom" secondItem="VNq-rX-aiY" secondAttribute="bottom" id="r6q-hP-467"/>
+                <constraint firstItem="YX2-6I-qPk" firstAttribute="leading" secondItem="oVe-ai-y7f" secondAttribute="leading" id="vY9-Nt-jUb"/>
+                <constraint firstItem="VE8-PC-KXD" firstAttribute="top" secondItem="LlF-M9-0gx" secondAttribute="bottom" constant="5" id="wug-zf-nvX"/>
+                <constraint firstItem="LlF-M9-0gx" firstAttribute="top" secondItem="IT3-bE-Lzb" secondAttribute="top" constant="40" id="xEZ-xh-jYY"/>
+                <constraint firstItem="VE8-PC-KXD" firstAttribute="top" secondItem="LlF-M9-0gx" secondAttribute="bottom" constant="5" id="yz8-CM-lcW"/>
             </constraints>
-            <point key="canvasLocation" x="139" y="316"/>
+            <point key="canvasLocation" x="68" y="216.5"/>
         </customView>
-        <viewController id="iPA-4D-n0c" userLabel="Main View Controller" customClass="MainViewController" customModule="MacNotesWidget" customModuleProvider="target">
-            <connections>
-                <outlet property="textView" destination="Arc-dg-KoK" id="liy-Cq-y2y"/>
-                <outlet property="view" destination="ZVo-xe-7Jk" id="cR6-bt-skW"/>
-            </connections>
-        </viewController>
-        <viewController id="eSj-8q-hV9"/>
     </objects>
+    <resources>
+        <image name="NSAddTemplate" width="11" height="11"/>
+        <image name="NSRemoveTemplate" width="11" height="11"/>
+        <image name="down" width="200" height="48"/>
+        <image name="up" width="200" height="48"/>
+    </resources>
 </document>
